selfhost/test/typechecker/set/error_type_mismatch_bindingdecl.3.out
Error at %FILE_NAME%:1:32
Type mismatch
  |  val a: Set<String> = #{"abcd", None}
                                    ^
Expected: String
but instead found: String?
