selfhost/test/typechecker/set/error_type_mismatch_bindingdecl.3.abra
val a: Set<String> = #{"abcd", None}